--- a/10/Makefile
+++ b/10/Makefile
@@ -1,4 +1,13 @@
 -include env_make
+MAKEFLAGS += --warn-undefined-variables
+.DEFAULT_GOAL := build
+.PHONY: *
+
+# we get these from CI environment if available, otherwise from git
+GIT_COMMIT ?= $(shell git rev-parse --short HEAD)
+GIT_BRANCH ?= $(shell git rev-parse --abbrev-ref HEAD)
+
+namespace ?= anaxexp
 
 MARIADB_VER ?= 10.3.8
 MARIADB_VER_MINOR = $(shell echo "${MARIADB_VER}" | grep -oE '^[0-9]+\.[0-9]+')
@@ -12,10 +21,26 @@ ifneq ($(STABILITY_TAG),)
     endif
 endif
 
-REPO = anaxexp/mariadb
+image := $(namespace)/mysql
+testImage := $(namespace)/mysql-testrunner
+REPO = $(namespace)/mariadb
 NAME = mariadb-$(MARIADB_VER_MINOR)
 
-.PHONY: build test push shell run start stop logs clean release
+## Display this help message
+help:
+	@awk '/^##.*$$/,/[a-zA-Z_-]+:/' $(MAKEFILE_LIST) | awk '!(NR%2){print $$0p}{p=$$0}' | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}' | sort
+
+
+# ------------------------------------------------
+# Target environment configuration
+
+# if you pass `TRACE=1` into the call to `make` then the Python tests will
+# run under the `trace` module (provides detailed call logging)
+ifndef TRACE
+python := python
+else
+python := python -m trace
+endif
 
 default: build
 
@@ -47,3 +72,17 @@ clean:
 	-docker rm -f $(NAME)
 
 release: build push
+
+## Print environment for build debugging
+debug:
+	@echo GIT_COMMIT=$(GIT_COMMIT)
+	@echo GIT_BRANCH=$(GIT_BRANCH)
+	@echo namespace=$(namespace)
+	@echo TAG=$(TAG)
+	@echo REPO=$(REPO)
+	@echo image=$(image)
+	@echo testImage=$(testImage)
+
+check_var = $(foreach 1,$1,$(__check_var))
+__check_var = $(if $(value $1),,\
+	$(error Missing $1 $(if $(value 2),$(strip $2))))
